--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>HTML5 Pacman</title>
+    <title>PACMAN</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/jquery.mobile-1.4.5.js"></script>
